RESOLVED FIXED301666
REGRESSION(iOS26) TestWebKitAPI.WKNavigationAction.UserInputState is a constant timeout
https://bugs.webkit.org/show_bug.cgi?id=301666
Summary REGRESSION(iOS26) TestWebKitAPI.WKNavigationAction.UserInputState is a consta...
Robert Jenner
Reported 2025-10-29 15:55:53 PDT
TestWebKitAPI.WKNavigationAction.UserInputState is a constant timeout on iOS26. It was a constant pass on iOS18. HISTORY: https://results.webkit.org/?suite=api-tests&test=TestWebKitAPI.WKNavigationAction.UserInputState TIMEOUT ERROR: "name": "TestWebKitAPI.WKNavigationAction.UserInputState", "output": "2025-10-29 08:19:00.299 TestWebKitAPI[56139:1213112] Successfully load keyboard extensions"
Attachments
Radar WebKit Bug Importer
Comment 1 2025-10-29 15:56:31 PDT
Robert Jenner
Comment 2 2025-10-29 15:58:02 PDT
I was able to reproduce this failure at iOS 26 Debug ToT running the test as follows: run-api-tests --iOS-simulator TestWebKitAPI.WKNavigationAction.UserInputState We see in the history that this test started to timeout when we transitioned our testing from iOS 18 to iOS 26. It was a constant pass on 18, and became a constant timeout since bringing up testing on iOS26.
EWS
Comment 3 2025-10-29 16:13:52 PDT
Test gardening commit 302320@main (8a9ddeac7238): <https://commits.webkit.org/302320@main> Reviewed commits have been landed. Closing PR #53175 and removing active labels.
Robert Jenner
Comment 4 2025-10-29 16:17:28 PDT
(In reply to EWS from comment #3) > Test gardening commit 302320@main (8a9ddeac7238): > <https://commits.webkit.org/302320@main> > > Reviewed commits have been landed. Closing PR #53175 and removing active > labels. I have temporarily disabled the test for iOS while under investigation.
Wenson Hsieh
Comment 5 2025-10-31 19:32:06 PDT
EWS
Comment 6 2025-10-31 23:04:47 PDT
Committed 302426@main (4eabc0e7c180): <https://commits.webkit.org/302426@main> Reviewed commits have been landed. Closing PR #53290 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.