REGRESSION(iOS26) TestWebKitAPI.WKNavigationAction.UserInputState is a constant timeout https://bugs.webkit.org/show_bug.cgi?id=301666 rdar://163673801

Reviewed by Abrar Rahman Protyasha.

Similar to https://webkit.org/b/301654, this test is also failing because the mouse and hover
gesture recognizers no longer change state when using `-setState:`.

Fix this by deploying the new testing helper, `-_setStateForTesting:`, to force the `-state`
property to return overridden values.

* Tools/TestWebKitAPI/Tests/WebKitCocoa/NavigationAction.mm:
(TEST(WKNavigationAction, UserInputState)):
* Tools/TestWebKitAPI/ios/IOSMouseEventTestHarness.h:
* Tools/TestWebKitAPI/ios/IOSMouseEventTestHarness.mm:
(TestWebKitAPI::MouseEventTestHarness::~MouseEventTestHarness):
(TestWebKitAPI::MouseEventTestHarness::mouseMove):
(TestWebKitAPI::MouseEventTestHarness::mouseDown):
(TestWebKitAPI::MouseEventTestHarness::mouseUp):
(TestWebKitAPI::MouseEventTestHarness::mouseCancel):

Now that calling `-touchesEnded:withEvent:`, etc. no longer causes the actual state to transition
in these API tests, we need to have the test itself force the state transition.

* Tools/TestWebKitAPI/ios/UIKitTestingHelpers.mm:
(-[UIGestureRecognizer _clearOverriddenStateForTesting]):

Drive-by fix: this was intended to only clear the state override map for the current gesture
recognizer, not all gestures.

Canonical link: https://commits.webkit.org/302426@main